Coding with John, Optionals tutorial